// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: empty 1`] = `
{
  "classNames": {
    "goal-trajectory-chart-empty": "items-center justify-center",
  },
  "tree": [
    "div",
    "div aria-label=Bench top load trajectory chart. Calibrating: not enough matched sessions to draw a band yet. role=img data-testid=goal-trajectory-chart-empty",
    "div",
  ],
}
`;

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: plotted 1`] = `
{
  "classNames": {
    "goal-trajectory-chart": "",
  },
  "tree": [
    "div",
    "div data-testid=goal-trajectory-chart",
    "div aria-label=Bench top load trajectory chart. Status: On track. Committed 185 lbs, stretch 195 lbs. Latest 183 lbs at week 3. Current week, no reading yet (week 4). 1 personal record. role=img data-testid=goal-trajectory-chart-canvas",
    "svg aria-hidden=true",
    "defs",
    "filter",
    "fedropshadow",
    "lineargradient",
    "stop",
    "stop",
    "lineargradient",
    "stop",
    "stop",
    "clippath",
    "rect",
    "rect data-testid=goal-trajectory-chart-plane",
    "g data-testid=goal-trajectory-chart-gridlines",
    "g",
    "g",
    "line data-testid=goal-trajectory-chart-gridline",
    "g",
    "line data-testid=goal-trajectory-chart-gridline",
    "g",
    "rect data-testid=goal-trajectory-chart-deload",
    "line data-testid=goal-trajectory-chart-meso-boundary",
    "rect data-testid=goal-trajectory-chart-current-week",
    "defs",
    "lineargradient",
    "stop",
    "stop",
    "stop",
    "clippath",
    "path",
    "g data-testid=goal-trajectory-chart-band",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "line data-testid=goal-trajectory-chart-committed-line",
    "line data-testid=goal-trajectory-chart-stretch-line",
    "path data-testid=goal-trajectory-chart-actual-shadow",
    "path data-testid=goal-trajectory-chart-actual-line",
    "g",
    "path data-testid=goal-trajectory-chart-next-target-lead",
    "circle data-testid=goal-trajectory-chart-next-target-dot",
    "circle data-testid=goal-trajectory-chart-current-week-point aria-label=Current week, no reading yet",
    "g",
    "circle data-testid=goal-trajectory-chart-actual-dot",
    "g",
    "circle data-testid=goal-trajectory-chart-actual-dot",
    "g",
    "path data-testid=goal-trajectory-chart-pr-star",
    "rect data-testid=goal-trajectory-chart-inner-top",
    "rect data-testid=goal-trajectory-chart-inner-left",
    "path data-testid=goal-trajectory-chart-lip",
    "text data-testid=goal-trajectory-chart-grid-label-170",
    "text data-testid=goal-trajectory-chart-grid-label-180",
    "text data-testid=goal-trajectory-chart-grid-label-190",
    "text data-testid=goal-trajectory-chart-committed-label",
    "text data-testid=goal-trajectory-chart-stretch-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "div data-testid=goal-trajectory-chart-week-targets",
    "div",
    "div",
    "button aria-label=Week 1, 175 lbs, Plan 175 lbs role=button tabindex=0 data-testid=goal-trajectory-chart-week-target-1",
    "div",
    "div",
    "div",
    "button aria-label=Week 2, 178 lbs, Plan 177 to 179 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-2",
    "div",
    "div",
    "div",
    "button aria-label=Week 3, 183 lbs, Personal record, Plan 179 to 183 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-3",
    "div",
    "div",
    "div",
    "button aria-label=Week 4, No reading yet, Plan 181 to 187 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-4",
    "div",
    "div",
    "div",
    "button aria-label=Week 5, No reading yet, Plan 183 to 191 lbs, Deload week, Next target: 185 x 5 role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-5",
    "div",
    "div",
    "div",
    "button aria-label=Week 6, No reading yet, Plan 185 to 195 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-6",
    "div",
  ],
}
`;

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: rights and axis 1`] = `
{
  "classNames": {
    "goal-trajectory-chart": "",
  },
  "tree": [
    "div",
    "div data-testid=goal-trajectory-chart",
    "div aria-label=Bench top load trajectory chart. Status: On track. Committed 185 lbs, stretch 195 lbs. Latest 183 lbs at week 3. 1 personal record. role=img data-testid=goal-trajectory-chart-canvas",
    "svg aria-hidden=true",
    "defs",
    "filter",
    "fedropshadow",
    "lineargradient",
    "stop",
    "stop",
    "lineargradient",
    "stop",
    "stop",
    "clippath",
    "rect",
    "rect data-testid=goal-trajectory-chart-plane",
    "g data-testid=goal-trajectory-chart-gridlines",
    "g",
    "text data-testid=goal-trajectory-chart-y-label",
    "g",
    "line data-testid=goal-trajectory-chart-gridline",
    "text data-testid=goal-trajectory-chart-y-label",
    "g",
    "line data-testid=goal-trajectory-chart-gridline",
    "text data-testid=goal-trajectory-chart-y-label",
    "g",
    "rect data-testid=goal-trajectory-chart-deload",
    "line data-testid=goal-trajectory-chart-meso-boundary",
    "defs",
    "lineargradient",
    "stop",
    "stop",
    "stop",
    "clippath",
    "path",
    "g data-testid=goal-trajectory-chart-band",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "rect data-testid=goal-trajectory-chart-band-column",
    "line data-testid=goal-trajectory-chart-committed-line",
    "line data-testid=goal-trajectory-chart-stretch-line",
    "path data-testid=goal-trajectory-chart-actual-shadow",
    "path data-testid=goal-trajectory-chart-actual-line",
    "g",
    "g",
    "circle data-testid=goal-trajectory-chart-actual-dot",
    "g",
    "circle data-testid=goal-trajectory-chart-actual-dot",
    "g",
    "path data-testid=goal-trajectory-chart-pr-star",
    "rect data-testid=goal-trajectory-chart-inner-top",
    "rect data-testid=goal-trajectory-chart-inner-left",
    "path data-testid=goal-trajectory-chart-lip",
    "text data-testid=goal-trajectory-chart-committed-label",
    "text data-testid=goal-trajectory-chart-stretch-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "text data-testid=goal-trajectory-chart-week-label",
    "div data-testid=goal-trajectory-chart-week-targets",
    "div",
    "div",
    "button aria-label=Week 1, 175 lbs, Plan 175 lbs role=button tabindex=0 data-testid=goal-trajectory-chart-week-target-1",
    "div",
    "div",
    "div",
    "button aria-label=Week 2, 178 lbs, Plan 177 to 179 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-2",
    "div",
    "div",
    "div",
    "button aria-label=Week 3, 183 lbs, Personal record, Plan 179 to 183 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-3",
    "div",
    "div",
    "div",
    "button aria-label=Week 4, No reading yet, Plan 181 to 187 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-4",
    "div",
    "div",
    "div",
    "button aria-label=Week 5, No reading yet, Plan 183 to 191 lbs, Deload week role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-5",
    "div",
    "div",
    "div",
    "button aria-label=Week 6, No reading yet, Plan 185 to 195 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-6",
    "div",
  ],
}
`;
